自定义指令，计算属性，侦听器

--- a/src/移动端的布局测试/响应式布局/响应式布局简介.md
+++ b/src/移动端的布局测试/响应式布局/响应式布局简介.md
@@ -22,7 +22,7 @@
 
 
 ## Bootstrap 简介 
-        其实bootstrao就是提供了一系列的CSS样式、字体、图标、插件等等，可以直接拿来使用。你需要下载下来放到自己的服务器上。就相当于安装第三方sdk包。
+        其实bootstrap就是提供了一系列的CSS样式、字体、图标、插件等等，可以直接拿来使用。你需要下载下来放到自己的服务器上。就相当于安装第三方sdk包。
 
     1、Bootstrap框架来自 Twitter（推特），是基于 HTML、CSS 和 JAVASCRIPT 的，它简洁灵活，使得 Web 开发更加快捷。
         它有一套比较完整的网页功能解决方案，而且控制权在框架本身，有预制样式库、组件和插件。使用者要按照框架所规定的某种规范进行开发。
