登录模块，还不知具体的路由路径处理

--- a/src/案例练手/BlogCase/_311博客案例简介.md
+++ b/src/案例练手/BlogCase/_311博客案例简介.md
@@ -7,6 +7,7 @@
         public 静态资源
                 html文件，由于要填充数据库或者网络的数据，所以不能单纯当作静态资源。
         model 数据库操作
+        middleware 存放express框架的中间件的处理逻辑.js
         route 路由
         views 模板
                 由于用了art-template模块来渲染成html文件，所以这里存的是.art文件，等待渲染。
@@ -30,3 +31,53 @@
     5、构建模块化路由
     6、构建博客管理页面模板
 
+## 三、功能实现 
+    一、登录功能：
+        1、下载第三方JS库解释Post请求参数。在app.js中配置，拦截并解析post请求。
+            npm install body-parser
+
+        2、下载第三方JS库bcrypt来加密密码。因为不能使用明文密码。是哈希加密，单向加密。我没安装。
+            bcrypt依赖的其他环境：
+                1. python 2.x
+                2. node-gyp
+                    npm install -g node-gyp
+                3. windows-build-tools
+                    npm install --global --production windows-build-tools
+            实例代码：
+                // 导入bcrypt模块
+                const bcrypt = require('bcrypt');
+                // 生成随机字符串 gen => generate 生成 salt 盐
+                let salt = await bcrypt.genSalt(10);
+                // 使用随机字符串对密码进行加密
+                let pass = await bcrypt.hash('明文密码', salt);
+                // 密码比对
+                let isEqual = await bcrypt.compare('明文密码', '加密密码');
+
+        3、在node.js中需要借助express-session实现session功能，在app.js中配置。
+           npm install express-session
+        
+
+
+## 四、cookie与session
+    浏览器--> 查看源码 --> 控制台右侧 --> application栏 --> 查看cookie
+    cookie(浏览器端)：浏览器在电脑硬盘中开辟的一块空间，主要供服务器端存储数据。
+        服务器存储在浏览器中的数据。每一次请求的时候，浏览器会自动发送cookie给服务器端进行校对，在请求的header中。
+        cookie中的数据是以域名的形式进行区分的。
+        cookie中的数据是有过期时间的，超过时间数据会被浏览器自动删除。
+        cookie中的数据会随着请求被自动发送到服务器端。
+
+    session(服务器端)：实际上就是一个对象，存储在服务器端的内存中，在session对象中也可以存储多条数据，每一条数据都有一个sessionid做为唯一标识。通过识别sessionid来确定当前会话结束了没有，会把最新的sessionid写入到cookie中。
+        服务器端存储的当前会话的最新数据。会话结束即删除。
+
+    
+## 五、路由路径解释：
+    1、在app.js文件中，通过app.set('views', path.join(__dirname, 'views'));之类配置的路径都是相对当前工程目录(BlogCase)下的路径。
+        所以一开始的相对路径就是项目路径，浏览器默认的也是这个路径。
+
+    2、在app.js文件中，通过app.use(express.static(path.join(__dirname, 'public')))的静态资源文件，
+        我不知道是不是在html页面中访问的资源文件相对路径都是从这里开始？
+
+    3、服务器请求路径，通过app.use('/home', home);设置了，凡是从浏览器根url请求的/home开头的url，都由home.js处理。
+        因此，在home.js文件中的admin.post('/login', login);等方法，其实都是加了前缀转移到这里来的，localhost:80/home/login
+        
+    4、
