理解express的中间件和路由

--- a/src/案例练手/BlogCase/_311博客案例简介.md
+++ b/src/案例练手/BlogCase/_311博客案例简介.md
@@ -2,7 +2,7 @@
 ## 一、项目介绍
     1、博客内容展示、博客管理功能，就是一个多人博客管理系统。
 
-## 二、案例初始化 
+## 二、案例初始化 (目录结构)
     1、 建立项目所需文件夹：
         public 静态资源
                 html文件，由于要填充数据库或者网络的数据，所以不能单纯当作静态资源。
@@ -20,6 +20,9 @@
     3、下载项目所需第三方模块：
         npm install express mongoose art-template express-art-template
         //express处理路由，mongoose操作数据库，art-template express-art-template渲染模板。
+
+        npm install joi
+        //JavaScript对象的规则描述语言和验证器,就是用来验证js对象的格式的，就是验证对象的属性，方法等等符不符合要求(正则表达式)。
 
     4、创建网站服务器：app.js
         使用express框架来构建整个项目：
@@ -71,13 +74,16 @@
 
     
 ## 五、路由路径解释：
-    1、在app.js文件中，通过app.set('views', path.join(__dirname, 'views'));之类配置的路径都是相对当前工程目录(BlogCase)下的路径。
-        所以一开始的相对路径就是项目路径，浏览器默认的也是这个路径。
+    1、浏览器的相对路径：一开始的相对路径就是项目路径，浏览器默认的也是这个路径。
+        因为在app.js文件中，通过app.set('views', path.join(__dirname, 'views'))等配置的路径都是相对当前工程目录(BlogCase)下的路径。
 
-    2、在app.js文件中，通过app.use(express.static(path.join(__dirname, 'public')))的静态资源文件，
-        我不知道是不是在html页面中访问的资源文件相对路径都是从这里开始？
+    2、浏览器的可访问路径：在app.js文件中，通过app.use(express.static(path.join(__dirname, 'public')))的静态资源文件，
+        我不知道是不是在html页面中访问的资源文件相对路径都是从这里开始？应该是运行浏览器方法public文件夹的意思。
 
-    3、服务器请求路径，通过app.use('/home', home);设置了，凡是从浏览器根url请求的/home开头的url，都由home.js处理。
+    3、服务器相对请求路径：通过app.use('/home', home);设置了，凡是从浏览器根url请求的/home开头的url，都由home.js处理。
         因此，在home.js文件中的admin.post('/login', login);等方法，其实都是加了前缀转移到这里来的，localhost:80/home/login
-        
-    4、
+
+    4、渲染art文件的路径：因为在app.js中设置了app.set('views', path.join(__dirname, 'views'))，所以模版的相对路径都是从views文件夹开始。
+        又因为express封装网络响应的respond，所以res.status(400).render('admin/error', {msg: '错误'});
+        其实是express框架从views文件夹中找error.art进行渲染，render是express框架的方法。
+
