博客案例还差首页模块bug

--- a/src/案例练手/BlogCase/_311博客案例简介.md
+++ b/src/案例练手/BlogCase/_311博客案例简介.md
@@ -24,6 +24,20 @@
         npm install joi
         //JavaScript对象的规则描述语言和验证器,就是用来验证js对象的格式的，就是验证对象的属性，方法等等符不符合要求(正则表达式)。
 
+        mongoose-sex-page库、ckeditor库、formidable库：解析form表单，支持get请求参数，post请求参数、文件上传。
+        FileReader库：文件读取。
+        morgan库：这个也是express的中间件，可以拦截客户端的请求，并且将请求信息打印到控制台。
+        config库：允许开发人员将不同运行环境下的应用配置信息抽离到单独的文件中，模块内部自动判断当前应用的运行环境，
+                  并读取对应的配置信息，极大提供应用配置信息的维护成本，避免了当运行环境重复的多次切换时，手动到项目代码中修改配置信息。
+                  在config库中，当前运行环境是通过检查电脑的NODE_ENV环境变量来确定的。该变量通常设置为“development”、“production”或“test”，以指示应用程序当前正在运行的环境。
+                    1.使用npm install config命令下载模块
+                    2.在项目的根目录下新建config文件夹
+                    3.在config文件夹下面新建default.json、development.json、production.json文件
+                    4.在项目中通过require方法，将模块进行导入
+                    5.使用模块内部提供的get方法获取配置信息
+
+
+
     4、创建网站服务器：app.js
         使用express框架来构建整个项目：
             1、在app.js中设置服务器的模板根路径为：./views
